--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.catrock.phenologyfriend" >
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.catrock.phenologyfriend.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,21 +20,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.catrock.phenologyfriend.AddObservationPlantActivity"
+            android:name=".AddObservationPlantActivity"
             android:label="@string/title_activity_add_observation_plant" >
         </activity>
         <activity
-            android:name="com.catrock.phenologyfriend.AddObservationAnimalActivity"
+            android:name=".AddObservationAnimalActivity"
             android:label="@string/title_activity_add_observation_animal" >
         </activity>
         <activity
-            android:name="com.catrock.phenologyfriend.SettingsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="com.catrock.phenologyfriend.AboutActivity"
+            android:name=".AboutActivity"
             android:label="@string/title_activity_about" >
         </activity>
+
+        <service
+            android:name=".GPSService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
