--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,10 +32,13 @@
             android:name=".AboutActivity"
             android:label="@string/title_activity_about" >
         </activity>
-        <activity
-            android:name=".Preferences">
+        <activity android:name=".Preferences" >
         </activity>
 
+        <service
+            android:name=".DownloadService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
