--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
 
         <service
-            android:name=".DownloadService"
+            android:name=".WeatherService"
             android:exported="false" >
         </service>
     </application>
